Fix alignment on status labels

--- a/standup/static/less/style.less
+++ b/standup/static/less/style.less
@@ -220,7 +220,7 @@ header {
         float: right;
         font-size: 12px;
         height: 24px;
-        line-height: 22px;
+        line-height: 23px;
         margin: 0 0 0 6px;
         padding: 0 8px;
       }
@@ -250,7 +250,7 @@ header {
       font-weight: bold;
       height: 24px;
       left: 20px;
-      line-height: 24px;
+      line-height: 22px;
       padding: 0 8px 0 52px;
       text-decoration: none;
       text-shadow: 0 1px 0 #fff;
